tests/baselines/reference/exportSpecifiers_js.errors.txt
a.js(2,10): error TS8006: 'export...type' declarations can only be used in TypeScript files.


==== ./a.js (1 errors) ====
    const foo = 0;
    export { type foo };
             ~~~~~~~~
!!! error TS8006: 'export...type' declarations can only be used in TypeScript files.
    